CON-000 | Fixed vertical space on mobiles for team member icons.

--- a/web/themes/custom/consulo_theme/sass/5.components/_components.team-members.scss
+++ b/web/themes/custom/consulo_theme/sass/5.components/_components.team-members.scss
@@ -288,11 +288,9 @@
         }
 
         &.icon-phone {
-          @include breakpoint(medium) {
-            display: block;
-            width: 100%;
-            margin-top: 1rem;
-          }
+          display: block;
+          width: 100%;
+          margin-top: 1rem;
 
           @include breakpoint(desktop) {
             display: inline-block;
